<resources>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="account_needed">Please select an account</string>
    <string name="account_setup_needed"><b>Account setup required</b>\nTap to select account</string>
    <string name="add_account">Add account&#8230;</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_friend_confirm">Add %s as a friend? Friending a player ensures they will
        always appear in the standings regardless of their rank.</string>
    <string name="adding_friend">Adding friend&#8230;</string>
    <string name="admob_id">a14f6e08f942b9e</string>
    <string name="app_name">Pick The Winner</string>
    <string name="attention">Attention</string>
    <string name="build_version">Build version</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Connect</string>
    <string name="connect_text">This application requests permission to connect your mobile device to the cloud.</string>
    <string name="contacting_server">Contacting server&#8230;</string>
    <string name="debug_build">(debug)</string>
    <string name="enable_beam">Please enable Android Beam to perform this task.</string>
    <string name="enable_nfc">Please enable NFC to perform this task.</string>
    <string name="eula_title">License</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
    <string name="exit">Close</string>
    <string name="failed_connect">Failed to connect. Please try again.</string>
    <string name="failed_get">Unable to connect to server.</string>
    <string name="friend_by_player_name">Enter your friend\'s Player Name</string>
    <string name="friend_fail_generic">Friending failed. Please try again.</string>
    <string name="friend_fail_no_account">Friending failed: Account setup required</string>
    <string name="friend_method">Complete action using</string>
    <string name="friend_method_manual">Keyboard</string>
    <string name="friend_method_manual_desc">Search by typing your friend\'s player name</string>
    <string name="friend_method_nfc">Android Beam</string>
    <string name="friend_method_nfc_desc">Transmit player information to another device via NFC</string>
    <string name="friend_success">Successfully updated friends!</string>
    <string name="hide_name">Hide my player name</string>
    <string name="in_the_chase">In The Chase</string>
    <string name="led">Phone LED</string>
    <string name="led_summary">Flash LED for notifications</string>
    <string name="legal">Legal</string>
    <string name="legal_content">This application is NOT affiliated with or endorsed by NASCAR®.
        NASCAR® and Sprint Cup® are registered trademarks of the National Association for Stock
        Car Auto Racing, Inc. All other trademarks, names or logos in this application are the
        property of their respective owners.</string>
    <string name="needs_account">To play Pick The Winner, you must first create a Google account.</string>
    <string name="name_taken">Name already taken. Please pick a different name.</string>
    <string name="nfc_instructions"><b>Add friend using Android Beam</b>\n\nPlease bring this
        device close to another NFC-capable device (typically back to back) and then touch your
        screen. Your player information will be beamed to that device and you will become
        friends.\n\nFor this to work, the other device must be unlocked, have NFC enabled, and
        have Pick The Winner installed.</string>
    <string name="nfc_sent">Player information sent!</string>
    <string name="notifications">Notifications</string>
    <string name="not_available">Not Available</string>
    <string name="not_supported">Not supported on this device</string>
    <string name="ok">OK</string>
    <string name="personal">Personal</string>
    <string name="player_name">Player Name</string>
    <string name="privacy">Privacy</string>
    <string name="private_name">&lt;Private&gt;</string>
    <string name="race_details">Race Details</string>
    <string name="race_num">Race %s</string>
    <string name="remind_questions">Question reminders</string>
    <string name="remind_questions_summary">Show when new questions are available</string>
    <string name="remind_questions_ticker">Questions available for the %s</string>
    <string name="remind_race">Race reminders</string>
    <string name="remind_race_notify">Race reminder</string>
    <string name="remind_race_summary">Show when it is time to watch the race</string>
    <string name="remind_race_ticker">Time to watch the %s</string>
    <string name="remind_results">Results available</string>
    <string name="remind_results_summary">Show when the results have been posted</string>
    <string name="remind_results_notify">Results available for %s</string>
    <string name="reminder_settings">Notification Settings</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="remove_friend_confirm">Remove %s as a friend?</string>
    <string name="retry">Retry</string>
    <string name="ringtone">Ringtone</string>
    <string name="ringtone_summary">Set a ringtone for notifications</string>
    <string name="select_account">Select the account you wish to authorize:</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="skip">Skip</string>
    <string name="tab_questions">QUESTIONS</string>
    <string name="tab_rule_book">RULE BOOK</string>
    <string name="tab_schedule">SCHEDULE</string>
    <string name="tab_standings">STANDINGS</string>
    <string name="tab_suggest">SUGGEST</string>
    <string name="track_layout">Track layout</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrate_summary">Vibrate for notifications</string>
    <string name="scoring_header">Weekly Scoring</string>
    <string name="scoring">Every week that there is a point paying NASCAR Sprint Cup Series race,
        five questions related to the event will be asked on Thursday. Each question has its
        own individual point value, for a total of 200 points:\n\n
        &#8226; <b>100 points</b>: Pick The Winner of the race\n
        &#8226; <b>50 points</b>: Answer Question 2 correctly\n
        &#8226; <b>35 points</b>: Answer Question 3 correctly\n
        &#8226; <b>10 points</b>: Pick the leader of most laps\n
        &#8226; <b>5 points</b>: Pick number of lap leaders
        \n\nYou can make your picks until the TV coverage is scheduled to begin (see Schedule
        page for exact times). Once the race is completed the points will be calculated within
        24 hours of the race results being made official by NASCAR.
        \n\nThe questions are multiple choice and due to the unpredictable nature of
        racing, in rare cases, none of the provided choices for a question will be correct.
        If this happens, no points will be awarded for that question that week.</string>
    <string name="chase_header">The Chase</string>
    <string name="chase">After the 26th race of the season, the players in the top 10 in points
        are automatically qualified for The Chase. In addition, there are two \"wild card\"
        qualifiers, specifically the two players with the most race wins who are ranked between
        11th and 20th in points.\n\nPlayers who qualify for The Chase will have their point totals
        reset to 5,000 points. The 10 automatic qualifiers receive a bonus of 10 points for
        each race win during the regular season, while the two wild cards receive no such bonus.
        The scoring for the remaining 10 races is the same as the first 26 races.</string>
    <string name="tie_header">Tie Breakers</string>
    <string name="tie">When players are tied with the same number of points, the following tie
        breakers will be used, in order, to determine the standings:\n\n
        &#8226; Player with more wins\n
        &#8226; Player who participated in more races\n
        &#8226; Player who answered questions first
        \n\nWhen selecting the two wild cards for The Chase, if there are multiple players tied
        with the same number of wins, the player(s) higher in the standings will be qualified
        for The Chase.</string>
    <string name="questions_1">Pick The Winner (100 points)</string>
    <string name="questions_2">%s (50 points)</string>
    <string name="questions_3">%s (35 points)</string>
    <string name="questions_4">Which driver will lead the most laps? (10 points)</string>
    <string name="questions_5">How many drivers will lead a lap? (5 points)</string>
    <string name="questions_no_race">Thanks for playing Pick The Winner this season. See you
        next year!</string>
    <string name="questions_prompt_drivers">Choose a driver</string>
    <string name="questions_prompt_numleaders">Choose a range</string>
    <string name="questions_prompt_q2q3">Choose your answer</string>
    <string name="questions_prompt_race">Choose a race</string>
    <string name="questions_soon">Questions will be available at</string>
    <string name="questions_success">Answers submitted!</string>
    <string name="standings_preseason">Preseason</string>
    <string name="standings_after">After %s</string>
    <string name="standings_rank">Rank</string>
    <string name="standings_player">Player</string>
    <string name="standings_points">Points</string>
    <string name="standings_races">Races</string>
    <string name="standings_wins">Wins</string>
    <string name="standings_footer">Only Top %d players and friends are shown. Players in yellow
        are currently in the Chase. The green bar indicates your place in the standings.</string>
    <string name="suggest_para1">You can submit question ideas for the next race at:</string>
    <string name="suggest_para2">It is optional and does not earn you any points. Questions
        should be about the outcome of the race and not be fact questions that can be researched
        for an answer.</string>
    <string name="suggest_hint">Enter question suggestion here</string>
    <string name="suggest_no_race">Thanks for all your question suggestions this season.</string>
    <string name="suggest_success">Thanks for your suggestion!</string>
    <string name="details_tv">TV: %s</string>
    <string name="details_size">Track Size: %s miles</string>
    <string name="ads_remove">Remove Ads</string>
    <string name="ads_success">Ads are now removed.</string>
    <string name="ads_error">Error purchasing: %s</string>
    <string name="widget_current_race">Race started %s.</string>
    <string name="widget_error_network">Problem with the network.</string>
    <string name="widget_error_retry">Touch to retry.</string>
    <string name="widget_exhibition">Exhibition event</string>
    <string name="widget_next_race">Next race is %s.</string>
    <string name="widget_no_answers">Answers not submitted!</string>
    <string name="widget_no_questions">Questions not yet available.</string>
    <string name="widget_no_race1">End of the season.</string>
    <string name="widget_no_race2">Thanks for playing!</string>
    <string name="widget_no_results">Results not yet available.</string>
    <string name="widget_please_submit">Please submit your answers.</string>
    <string name="widget_race_logo">Race Logo</string>
    <string name="widget_submitted">Answers submitted.</string>
    <plurals name="num_minutes_ago">
        <item quantity="one">1 minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="num_hours_ago">
        <item quantity="one">1 hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="num_days_ago">
        <item quantity="one">yesterday</item>
        <item quantity="other">%d days ago</item>
    </plurals>
</resources>