<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012-2014 Gregory S. Meiste <http://gregmeiste.com>

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_questions"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questions_padding"
        android:paddingLeft="@dimen/questions_padding"
        android:paddingRight="@dimen/questions_padding"
        android:orientation="vertical">

        <TextView style="@style/QuestionsText" android:text="@string/questions_1" />
        <Spinner
            android:id="@+id/winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/questions_prompt_drivers" />

        <TextView style="@style/QuestionsText" android:id="@+id/question2" />
        <Spinner
            android:id="@+id/question2a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/questions_prompt_q2q3" />

        <TextView style="@style/QuestionsText" android:id="@+id/question3" />
        <Spinner
            android:id="@+id/question3a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/questions_prompt_q2q3" />

        <TextView style="@style/QuestionsText" android:text="@string/questions_4" />
        <Spinner
            android:id="@+id/mostlaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/questions_prompt_drivers" />

        <TextView style="@style/QuestionsText" android:text="@string/questions_5" />
        <Spinner
            android:id="@+id/numleaders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/questions_prompt_numleaders" />

        <Button
            android:id="@+id/send"
            android:layout_marginTop="20sp"
            android:layout_width="160dip"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>