<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 Gregory S. Meiste <http://gregmeiste.com>

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<com.meiste.greg.ptw.ObservableScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_questions"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
        
        <Spinner
            android:id="@+id/race_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/questions_prompt_race" />
        
        <TextView style="@style/QuestionsText" android:text="@string/questions_1" />
        <TextView style="@style/QuestionsAnswer" android:id="@+id/answer1" />
        <TextView style="@style/QuestionsCorrectAnswer" android:id="@+id/correct1" />
        
        <TextView style="@style/QuestionsText" android:id="@+id/question2" />
        <TextView style="@style/QuestionsAnswer" android:id="@+id/answer2" />
        <TextView style="@style/QuestionsCorrectAnswer" android:id="@+id/correct2" />
        
        <TextView style="@style/QuestionsText" android:id="@+id/question3" />
        <TextView style="@style/QuestionsAnswer" android:id="@+id/answer3" />
        <TextView style="@style/QuestionsCorrectAnswer" android:id="@+id/correct3" />
        
        <TextView style="@style/QuestionsText" android:text="@string/questions_4" />
        <TextView style="@style/QuestionsAnswer" android:id="@+id/answer4" />
        <TextView style="@style/QuestionsCorrectAnswer" android:id="@+id/correct4" />
        
        <TextView style="@style/QuestionsText" android:text="@string/questions_5" />
        <TextView style="@style/QuestionsAnswer" android:id="@+id/answer5" />
        <TextView style="@style/QuestionsCorrectAnswer" android:id="@+id/correct5" />
        
    </LinearLayout>

</com.meiste.greg.ptw.ObservableScrollView>